welcome.lessons.welcome.array.array667.Array667.scala.error
array667:1: error: type mismatch;
 found   : Unit
 required: Int
def array667(nums:Array[Int]): Int = {
                                     ^